Trouble with custom domain

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jyu98-1661808.github.io/portfolio/",
+  "homepage": "https://jiyunyu.me/",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
